--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:generate": "node test/generate-markdown.mjs"
   },
   "devDependencies": {
-    "wrangler": "^3.0.0",
-    "miniflare": "^3.0.0"
+    "miniflare": "^3.0.0",
+    "wrangler": "^4.59.2"
   }
 }
